# TOTPGen

./: .gitignore  LICENSE  README.md  cli.py  main.py  pyproject.toml  requirements.txt  secrets.py  totp.py  view.py
src/totpgen/: __init__.py  add.py  ls.py  main.py  remove.py  totp_store.py
src/totpgen/cli/: __init__.py  cli.py
