[project]
name = "TOTPGen"
version = "0.0.1"
authors = [
  { name="Rob Pellegrin", email="none@none.com" },
]
description = "A minimal, dependency free TOTP generator."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://gitlab.robpellegrin.com/robpellegrin/totpgen"
Issues = "https://gitlab.robpellegrin.com/pypa/totpgen/issues"

[project.scripts]
totp = "totpgen:main"

[tool.black]
line-length = 79 
target-version = ['py39']

[tool.pylint."MESSAGES CONTROL"]
disable = ["missing-docstring"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
